width alignment fixes

--- a/src/css/_embed.scss
+++ b/src/css/_embed.scss
@@ -1,10 +1,3 @@
-html,body {
-    overflow: hidden;
-    padding: 0;
-    margin: 0;
-    background-color: #FFF;
-}
-
 
 .main {
      margin: auto;
@@ -58,23 +51,33 @@ body {
 
 .swiper-container {
      width: 100%;
+     max-width: 620px;
      overflow: hidden;
      // height: 300px;
      // margin-left:10px;
      // margin-right:10px;
      display: flex;
 
+
      @include mq(tablet) {
           margin-bottom: 24px;
      }
 
      @include mq(tablet) {
-          padding-left: 20px;
-          padding-right: 20px;
+        
+        
      }
-     @include mq($from:leftCol, $until:wide) {
+     // @include mq($from:leftCol, $until:wide) {
+     //     padding-left: 180px;
+     // }
+
+     @include mq(leftCol) {
          padding-left: 180px;
-     }
+    }
+
+    @include mq(wide) {
+         padding-left: 0;
+    }
 
  }
 
@@ -83,6 +86,63 @@ body {
           flex-wrap: wrap;
      }
 }
+
+.swiper-container, .visual-element--iframe {
+    margin-left: 0;
+
+    @include mq(embedThreeEighty){
+        width:360px;  
+    }
+
+
+    @include mq(embedFiveEighty){
+        width:540px;
+        margin-left: 0;
+     
+    }
+
+    @include mq(desktop) {
+        width:620px;
+        margin-left: 0px;
+        
+    }
+
+    @include mq(leftCol) {
+        
+    }
+
+    @include mq(wide) {
+
+        margin-left: 240px;
+    }
+}
+
+
+.visual-element--iframe {
+  
+
+    @include mq(embedThreeEighty){
+        
+        
+    }
+
+    @include mq(embedFiveEighty){
+            margin-left: 0;
+      
+    }
+
+    @include mq(leftCol) {
+         margin-left: 160px;
+         width:620px;
+    }
+
+    @include mq(wide) {
+         margin-left: 240px;
+    }
+
+
+}
+
 
 .swiper-slide {
     font-size: 18px;
@@ -99,8 +159,8 @@ body {
     &.pink {
         background-color: rgba($pink, 0.4);
     }
-    &.yellow {
-        background-color: $yellow;
+    &.state {
+        background-color:rgba($state, 0.8);
     }
     &.green {
         background-color: $green;
@@ -110,6 +170,10 @@ body {
     }
     &.grey {
         background-color: rgba($grey, 0.4);
+    }
+
+    &.autonomy{
+      background-color: $autonomy;
     }
 
      p {
@@ -127,7 +191,6 @@ body {
 
      @include mq(mobileLandscape) {
         margin-right: 20px;
-        margin-bottom: 12px;
      }
      
 
@@ -248,20 +311,23 @@ div.card-icon {
 .card-group__header {
     position: relative;
     box-sizing: border-box;
-    padding: 0;
+    padding-left: 10px;
+    padding-bottom: 10px;
     overflow: hidden;
     font-family: "Guardian Egyptian Web", Georgia, serif;
-        z-index: 140;
-        border-top: 1px solid #EEE;
+    z-index: 140;
+
         // margin-top: 6px;
-  
+    @include mq(tablet){
+        padding-left: 0;
+    }
 
     @include mq(leftCol) {
-         padding-left: 180px;
+         padding-left: 160px;
     }
 
     @include mq(wide) {
-         padding-left: 260px;
+         padding-left: 240px;
     }
     
     &__text {
@@ -294,8 +360,12 @@ div.card-icon {
             }
         }
     }
+
    
 }
+
+
+
 
 .interactive-nav {
     display:none;
@@ -437,7 +507,6 @@ figure.element.element-atom {
 .gv-card-header-area{
     position:relative;
     top: 4px;
-    margin-left: 78px;
 }
 
 .card-summary {
