--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -3,12 +3,16 @@ $blue: #4bc6df;//dc2a7d
 $pink: #dc2a7d;//
 $purple: #4e0375;//
 $grey: #63717a;//
-$yellow: #ffbb00;
+
 $green: #5ebfba;
 $neutral-light: rgb(231,231,231);
 $neutral-mid: rgb(81,81,81);
 $neutral-dark: rgb(31,31,31);
 
+$yellow: #fcdd03;
+$gold: #fdb913 ;
+$state:#fcdd03;
+$autonomy:#fdb913;
 
 $guardian-brand: #005689 ;
 $guardian-brand-light: #94b1ca;
@@ -19,15 +23,19 @@ $guardian-brand-dark: #00456e;
 @import "cardItem";
 @import "swiper";
 @import "uxSuite";
-@import "iframe";
 
 
 // Uncomment for embeds
-//@import "embed";
+@import "embed";
 
 // Uncomment for full screen (including immersive article main media)
-@import "fullscreen";
+//@import "fullscreen";
 
 a {
    color: #00456e; 
+}
+
+.element-atom,
+.interactive-atom {
+    margin: 0 !important;
 }
